CLI 프로그램 만드는 중 - 주문하기 기능 구현, 수정중